# hotel-accommodation

./: .gitignore  LICENSE  alembic.ini  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 090aece45245_add_data_id_column.py  0de2977d75e9_change_dirty_column_length.py  38fbc03521de_change_version_column_type.py  3a1544b425ba_change_uix_name_card_no_to_uidx_name_.py  52dfec97c557_change_birthday_type.py  7539e9cf1d5b_change_mobile_tel_column_length.py  88f8e4ec4567_add_uniqueconstraint_uix_name_card_no_.py  8fa65d8e0a15_add_fax_column_comment_and_change_fax_.py  95c8a80805e9_change_mobile_tel_column_length.py  a4490d293d13_change_gender_column_length.py  bf2baeed0499_empty_init.py
app/: db.py
